--- a/holidaymaker/src/main/resources/application.properties
+++ b/holidaymaker/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 #----MYSQL driver config
-spring.datasource.url=jdbc:mysql://localhost:3306/holidaymaker?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/holidaymaker?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=castor
 #----Port Config
 server.port=8091
 #----JPA / HIBERNATE
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+# spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.properties.hibernate.format_sql=true
