--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 holidaymaker/src/main/resources/application.properties
 holidaymaker/src/main/resources/application.properties
+holidaymaker/src/main/resources/application.properties
