--- a/holidaymaker/src/main/resources/application.properties
+++ b/holidaymaker/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8091
 #----JPA / HIBERNATE
 # spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 # spring.jpa.properties.hibernate.format_sql=true
