--- a/holidaymaker/src/main/resources/application.properties
+++ b/holidaymaker/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #----MYSQL driver config
-spring.datasource.url=jdbc:mysql://localhost:3306/holidaymaker?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/holidayMaker?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=castor
 #----Port Config
