changes endpoints & repo
endpoints added to SearchController
methods added to RoomRepository

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 holidaymaker/src/main/resources/application.properties
 holidaymaker/src/main/resources/application.properties
 holidaymaker/src/main/resources/application.properties
+holidaymaker/src/main/resources/application.properties
