--- a/holidaymaker/src/main/resources/application.properties
+++ b/holidaymaker/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #----MYSQL driver config
-spring.datasource.url=jdbc:mysql://localhost:3306/holidayMaker?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/holidaymaker?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=castor
+spring.datasource.password=password
 #----Port Config
 server.port=8091
 #----JPA / HIBERNATE
